versions/v4.1.0/doxygen/html/globals_defs_h.md
---
version: v4.1.0
source_url: https://docs.zephyrproject.org/4.1.0/doxygen/html/globals_defs_h.html
original_path: doxygen/html/globals_defs_h.html
---

| Logo | Zephyr API Documentation 4.1.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Here is a list of all macros with links to the files they belong to:

### - h -

- HACTLR\_BUSTIMEOUTR\_BIT : [cpu.h](arm_2cortex__a__r_2cpu_8h.md#a7d34434117254b1745ff62a40f850455)
- HACTLR\_CDBGDCI : [cpu.h](arm_2cortex__a__r_2cpu_8h.md#af6034c7fd77f1096314b8753ddd83621)
- HACTLR\_CPUACTLR : [cpu.h](arm_2cortex__a__r_2cpu_8h.md#a367fbf6725426a0cb44a01cd7d3bbac4)
- HACTLR\_ERR\_BIT : [cpu.h](arm_2cortex__a__r_2cpu_8h.md#ae245fc7db7d6db0279d6da680de1981f)
- HACTLR\_FLASHIFREGIONR : [cpu.h](arm_2cortex__a__r_2cpu_8h.md#a6161c9da01ec5a54597681bc187e2c40)
- HACTLR\_INIT : [cpu.h](arm_2cortex__a__r_2cpu_8h.md#aa417d6d641a116d5e2d3eaf6a56b1cc8)
- HACTLR\_INTMONR\_BIT : [cpu.h](arm_2cortex__a__r_2cpu_8h.md#a4f2b59b38069f9b4ddcd879bd666a9df)
- HACTLR\_PERIPHPREGIONR : [cpu.h](arm_2cortex__a__r_2cpu_8h.md#a054011b021f935829db1fe81688a2efa)
- HACTLR\_QOSR\_BIT : [cpu.h](arm_2cortex__a__r_2cpu_8h.md#ada072a55f7ba6970e29472d7ca78d967)
- HAS\_BUILTIN : [toolchain.h](toolchain_8h.md#a474a719388efd0578c7c98a0961e23dd)
- HAWKBIT\_EVENT\_CREATE\_CALLBACK : [event.h](group__hawkbit__event.md#ga05eec89437dfd13a022ba2eac6b1e0d9)
- HCI\_PKT\_TYPE\_ESCO\_2EV3 : [hci\_types.h](hci__types_8h.md#a1ccc4d6e5cfc560b7e2cb80c4c386607)
- HCI\_PKT\_TYPE\_ESCO\_2EV5 : [hci\_types.h](hci__types_8h.md#a1252be2692bcfb7a1256c63c4deed15d)
- HCI\_PKT\_TYPE\_ESCO\_3EV3 : [hci\_types.h](hci__types_8h.md#ac5f09e3db1bc4d697ff705802e9ec3a0)
- HCI\_PKT\_TYPE\_ESCO\_3EV5 : [hci\_types.h](hci__types_8h.md#aa45e51b1be89505fe599bc7983fcb950)
- HCI\_PKT\_TYPE\_ESCO\_EV3 : [hci\_types.h](hci__types_8h.md#a9530e916a0cf905e2185cd021320bfff)
- HCI\_PKT\_TYPE\_ESCO\_EV4 : [hci\_types.h](hci__types_8h.md#a3e0b6a1aa3818cb0c36f7883fd361c7e)
- HCI\_PKT\_TYPE\_ESCO\_EV5 : [hci\_types.h](hci__types_8h.md#a1f7474cb16a495bd81dc1f23d4103f70)
- HCI\_PKT\_TYPE\_HV1 : [hci\_types.h](hci__types_8h.md#aecb5b3886467c41baf979d01d8bde4a1)
- HCI\_PKT\_TYPE\_HV2 : [hci\_types.h](hci__types_8h.md#ae68633ce74639ec6f06d5ef4feee2d09)
- HCI\_PKT\_TYPE\_HV3 : [hci\_types.h](hci__types_8h.md#aecd04ca27f536a1cb15aacf9ee80aba8)
- HCI\_PKT\_TYPE\_SCO\_HV1 : [hci\_types.h](hci__types_8h.md#a4b048addd84409867177a97c785c4a73)
- HCI\_PKT\_TYPE\_SCO\_HV2 : [hci\_types.h](hci__types_8h.md#a98f8217b27c0b9b7817c86520da45018)
- HCI\_PKT\_TYPE\_SCO\_HV3 : [hci\_types.h](hci__types_8h.md#af67cdc23b6542e6d8323f14e17c7171d)
- HCR\_AMO\_BIT : [cpu.h](arm64_2cpu_8h.md#ad67b4ccd0f2888823525fcc71ea76419)
- HCR\_FMO\_BIT : [cpu.h](arm64_2cpu_8h.md#a223d70f2acad7d361ee6fb7b44bdb2e5)
- HCR\_IMO\_BIT : [cpu.h](arm64_2cpu_8h.md#a1792be817d3129a78d60d8bf0d1e5689)
- HCR\_RW\_BIT : [cpu.h](arm64_2cpu_8h.md#a2ecb1fa994da111656e57828a2fb5015)
- HCR\_TGE\_BIT : [cpu.h](arm64_2cpu_8h.md#a5d2f11fc2059239829db563c8a2bbafe)
- HEADER\_FUNC\_DESC : [usb\_cdc.h](usb__cdc_8h.md#a008b7d343c5a1876a78c885f7a496b66)
- HEAP\_ID\_FROM\_POINTER : [heap\_listener.h](group__heap__listener__apis.md#ga77e603053a5b69caae2a49e441a525c0)
- HEAP\_ID\_LIBC : [heap\_listener.h](group__heap__listener__apis.md#ga7627d1b500bb7e833770c99071f9255d)
- HEAP\_LISTENER\_ALLOC\_DEFINE : [heap\_listener.h](group__heap__listener__apis.md#ga1854b23cbd41dec0d8262e8f122ebd5d)
- HEAP\_LISTENER\_FREE\_DEFINE : [heap\_listener.h](group__heap__listener__apis.md#ga7e5822ebd4c08235b01cf99cd6fe10e8)
- HEAP\_LISTENER\_RESIZE\_DEFINE : [heap\_listener.h](group__heap__listener__apis.md#gaa4fa9685749e050ca06e7cdc99b7c970)
- HFP\_HF\_CMD\_CME\_ERROR : [hfp\_hf.h](group__bt__hfp.md#ga80133496d4868f11381d14fe46cfdb51)
- HFP\_HF\_CMD\_ERROR : [hfp\_hf.h](group__bt__hfp.md#ga463b8eb680e7cbedfbf9c5e5628558af)
- HFP\_HF\_CMD\_OK : [hfp\_hf.h](group__bt__hfp.md#ga7c90e2ab7ed6c5b25252f88408235598)
- HFP\_HF\_CMD\_UNKNOWN\_ERROR : [hfp\_hf.h](group__bt__hfp.md#ga613fa4c3e102c7ab20e587f34c14d5c6)
- HFRC\_EXT\_P26 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a22151075c9c0c0d69cc8141839f1a310)
- HFXO0\_BUFOUTREQINASYNC\_PA0 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#af3d9d425c19fc9f1c56b16a2ce3ca69b), [xg24-pinctrl.h](xg24-pinctrl_8h.md#af3d9d425c19fc9f1c56b16a2ce3ca69b)
- HFXO0\_BUFOUTREQINASYNC\_PA1 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#ae0120388287c3f60a6190eda52121f0e), [xg24-pinctrl.h](xg24-pinctrl_8h.md#ae0120388287c3f60a6190eda52121f0e)
- HFXO0\_BUFOUTREQINASYNC\_PA10 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#a8f3ea3c9f889417511fa12e8ee2a3148)
- HFXO0\_BUFOUTREQINASYNC\_PA2 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#af4852125e31ddddd1fed1fdacf153e02), [xg24-pinctrl.h](xg24-pinctrl_8h.md#af4852125e31ddddd1fed1fdacf153e02)
- HFXO0\_BUFOUTREQINASYNC\_PA3 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#a25681d36b593b30263243a6cc5a319b1), [xg24-pinctrl.h](xg24-pinctrl_8h.md#a25681d36b593b30263243a6cc5a319b1)
- HFXO0\_BUFOUTREQINASYNC\_PA4 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#a25093f4fd8152b2a499f78117b860d0c), [xg24-pinctrl.h](xg24-pinctrl_8h.md#a25093f4fd8152b2a499f78117b860d0c)
- HFXO0\_BUFOUTREQINASYNC\_PA5 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#aa6ce87ffb49361ab8876afa308d75777), [xg24-pinctrl.h](xg24-pinctrl_8h.md#aa6ce87ffb49361ab8876afa308d75777)
- HFXO0\_BUFOUTREQINASYNC\_PA6 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#ae0b89336110416cebaa0a1e899daa562), [xg24-pinctrl.h](xg24-pinctrl_8h.md#ae0b89336110416cebaa0a1e899daa562)
- HFXO0\_BUFOUTREQINASYNC\_PA7 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#a4fe6a622e71c24bd3203fcb7f1ee0037), [xg24-pinctrl.h](xg24-pinctrl_8h.md#a4fe6a622e71c24bd3203fcb7f1ee0037)
- HFXO0\_BUFOUTREQINASYNC\_PA8 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#a26c5fbf9b20f95ea89a36640e4cad757), [xg24-pinctrl.h](xg24-pinctrl_8h.md#a26c5fbf9b20f95ea89a36640e4cad757)
- HFXO0\_BUFOUTREQINASYNC\_PA9 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#a35a6e2e7cf644a3b80df8d1739ef35da), [xg24-pinctrl.h](xg24-pinctrl_8h.md#a35a6e2e7cf644a3b80df8d1739ef35da)
- HFXO0\_BUFOUTREQINASYNC\_PB0 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#adc4fb29901bb4530d24f18598041e248), [xg24-pinctrl.h](xg24-pinctrl_8h.md#adc4fb29901bb4530d24f18598041e248)
- HFXO0\_BUFOUTREQINASYNC\_PB1 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#a30174f1bc16727689379ce617ffa2696), [xg24-pinctrl.h](xg24-pinctrl_8h.md#a30174f1bc16727689379ce617ffa2696)
- HFXO0\_BUFOUTREQINASYNC\_PB2 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#aca249022c7464cf1062124bd3ab7d399), [xg24-pinctrl.h](xg24-pinctrl_8h.md#aca249022c7464cf1062124bd3ab7d399)
- HFXO0\_BUFOUTREQINASYNC\_PB3 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#a0b069b62a4387a9819b03652bf123130), [xg24-pinctrl.h](xg24-pinctrl_8h.md#a0b069b62a4387a9819b03652bf123130)
- HFXO0\_BUFOUTREQINASYNC\_PB4 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#a3959e7648de41ada54851249af0e776f), [xg24-pinctrl.h](xg24-pinctrl_8h.md#a3959e7648de41ada54851249af0e776f)
- HFXO0\_BUFOUTREQINASYNC\_PB5 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#aacf5c309e16b253413b98de57e5640ba), [xg24-pinctrl.h](xg24-pinctrl_8h.md#aacf5c309e16b253413b98de57e5640ba)
- HFXO0\_BUFOUTREQINASYNC\_PB6 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#a48c18b8dd0051aab19ad2088d66534b2)
- HID\_BOOT\_IFACE\_CODE\_KEYBOARD : [hid.h](group__usb__hid__definitions.md#ga6e6276ae88c414e10c602d5e041738ab)
- HID\_BOOT\_IFACE\_CODE\_MOUSE : [hid.h](group__usb__hid__definitions.md#ga900873d4834ea511a08b08debe62bedf)
- HID\_BOOT\_IFACE\_CODE\_NONE : [hid.h](group__usb__hid__definitions.md#ga953074178d707cd3538da80f36a96ff6)
- HID\_COLLECTION : [hid.h](group__usb__hid__items.md#gad010ed98662b0e653754caff1dfd352f)
- HID\_COLLECTION\_APPLICATION : [hid.h](group__usb__hid__definitions.md#ga2e5e5ad0919fbaea0e6f8e5d86f4c2fd)
- HID\_COLLECTION\_LOGICAL : [hid.h](group__usb__hid__definitions.md#ga904a372a663bd7d9205402a3a014c04b)
- HID\_COLLECTION\_MODIFIER : [hid.h](group__usb__hid__definitions.md#gaabc1c6bed23b88f4cdc89d5347595d4f)
- HID\_COLLECTION\_NAMED\_ARRAY : [hid.h](group__usb__hid__definitions.md#ga8e1610365a1556adf7121cc3b1f83080)
- HID\_COLLECTION\_PHYSICAL : [hid.h](group__usb__hid__definitions.md#gaca1e227f9241c217b8b1aeae6c4bd672)
- HID\_COLLECTION\_REPORT : [hid.h](group__usb__hid__definitions.md#gac58ab4780c054754b7f94ff97a152694)
- HID\_COLLECTION\_USAGE\_SWITCH : [hid.h](group__usb__hid__definitions.md#ga64af797e424ea1e2c02c745f30721e48)
- HID\_END\_COLLECTION : [hid.h](group__usb__hid__items.md#ga6cd6affb9d52e0bf98c7a5c83d03a764)
- HID\_FEATURE : [hid.h](group__usb__hid__items.md#ga951a415e05e95492250d4fb43a37090d)
- HID\_INPUT : [hid.h](group__usb__hid__items.md#ga8646699330c45fb008d50b54be339c6c)
- HID\_ITEM : [hid.h](group__usb__hid__items.md#ga4e9dc6652402e0b87e1313c143737ed4)
- HID\_ITEM\_TAG\_COLLECTION : [hid.h](group__usb__hid__definitions.md#ga2c06052593b060466f4c338a88319485)
- HID\_ITEM\_TAG\_COLLECTION\_END : [hid.h](group__usb__hid__definitions.md#ga3f4fe1817887966f0d05aa597cd0ab79)
- HID\_ITEM\_TAG\_FEATURE : [hid.h](group__usb__hid__definitions.md#gaeadcca849f0a0923d9a70605c44464a6)
- HID\_ITEM\_TAG\_INPUT : [hid.h](group__usb__hid__definitions.md#ga66e1c50fe814fd05d61dce12ce3888c1)
- HID\_ITEM\_TAG\_LOGICAL\_MAX : [hid.h](group__usb__hid__definitions.md#gaab6aec72cca41670464605d6970ad553)
- HID\_ITEM\_TAG\_LOGICAL\_MIN : [hid.h](group__usb__hid__definitions.md#ga034033b1ae6f4677aef82d4243c6f712)
- HID\_ITEM\_TAG\_OUTPUT : [hid.h](group__usb__hid__definitions.md#ga70c32518a6b538831e821ad30022679b)
- HID\_ITEM\_TAG\_PHYSICAL\_MAX : [hid.h](group__usb__hid__definitions.md#gaa68bd8a73cee33d810484f4aa3f30e92)
- HID\_ITEM\_TAG\_PHYSICAL\_MIN : [hid.h](group__usb__hid__definitions.md#ga6dfdd60d0b985d683a58ad752d3ef3c3)
- HID\_ITEM\_TAG\_REPORT\_COUNT : [hid.h](group__usb__hid__definitions.md#ga1847701703130ce8f57547811f28b2b4)
- HID\_ITEM\_TAG\_REPORT\_ID : [hid.h](group__usb__hid__definitions.md#ga76cd3a266ae5d5e29292d93caceece72)
- HID\_ITEM\_TAG\_REPORT\_SIZE : [hid.h](group__usb__hid__definitions.md#ga0e6d7a56593bd25a5e15683e9271bb19)
- HID\_ITEM\_TAG\_UNIT : [hid.h](group__usb__hid__definitions.md#ga98267b4ff28f435d67d2a7bf1055fc7c)
- HID\_ITEM\_TAG\_UNIT\_EXPONENT : [hid.h](group__usb__hid__definitions.md#ga7c6d81ee211814ec9b5d17f95e57639b)
- HID\_ITEM\_TAG\_USAGE : [hid.h](group__usb__hid__definitions.md#gaefd616ecaa8fc8762e65ec9d7b01f0cd)
- HID\_ITEM\_TAG\_USAGE\_MAX : [hid.h](group__usb__hid__definitions.md#gac2a0aff74caff6c03511fc0b6db6167b)
- HID\_ITEM\_TAG\_USAGE\_MIN : [hid.h](group__usb__hid__definitions.md#ga4e6f4133f12276f4f9fa51ab06580676)
- HID\_ITEM\_TAG\_USAGE\_PAGE : [hid.h](group__usb__hid__definitions.md#ga73f58fa37c0bf6698463b9d31c8a511f)
- HID\_ITEM\_TYPE\_GLOBAL : [hid.h](group__usb__hid__definitions.md#ga8e56e8090f1af7aae473e8a8b6832fb8)
- HID\_ITEM\_TYPE\_LOCAL : [hid.h](group__usb__hid__definitions.md#ga0bfb0e326d9a01072c029cba788d6456)
- HID\_ITEM\_TYPE\_MAIN : [hid.h](group__usb__hid__definitions.md#ga9a71248c522943951b5af70ec9c14c02)
- HID\_KEYBOARD\_REPORT\_DESC : [hid.h](group__usb__hid__mk__report__desc.md#gaea973ffbe1612187c90614133956cfd6)
- HID\_LOGICAL\_MAX16 : [hid.h](group__usb__hid__items.md#ga9b804d676812dcfb0ec12f3aa887e37f)
- HID\_LOGICAL\_MAX32 : [hid.h](group__usb__hid__items.md#gae9d17e753685b0df6c53f942ce9c95d2)
- HID\_LOGICAL\_MAX8 : [hid.h](group__usb__hid__items.md#ga2f6b809ae85b6716ade8c52da4fa56af)
- HID\_LOGICAL\_MIN16 : [hid.h](group__usb__hid__items.md#ga5e290798d55bccd7474dbfb6bc2d1033)
- HID\_LOGICAL\_MIN32 : [hid.h](group__usb__hid__items.md#gad4b2ff8642676d692fd0d56ab0cbeaa7)
- HID\_LOGICAL\_MIN8 : [hid.h](group__usb__hid__items.md#gacd141f6ede5122f260cd50338649d458)
- HID\_MOUSE\_REPORT\_DESC : [hid.h](group__usb__hid__mk__report__desc.md#ga3696f0782268d504b0c8bb540236779f)
- HID\_OUTPUT : [hid.h](group__usb__hid__items.md#ga6ef7aa576bf69f9ba5f93df500a1403c)
- HID\_PROTOCOL\_BOOT : [hid.h](group__usb__hid__definitions.md#gafd24e87747c82293e689f58157f06128)
- HID\_PROTOCOL\_REPORT : [hid.h](group__usb__hid__definitions.md#ga982c0da911cbda6e09bd48a5e4ab85f1)
- HID\_REPORT\_COUNT : [hid.h](group__usb__hid__items.md#ga71192f2a55f05456b893069ebfbc5b98)
- HID\_REPORT\_ID : [hid.h](group__usb__hid__items.md#ga1b45fce2c7df2847b1326fca29cef389)
- HID\_REPORT\_SIZE : [hid.h](group__usb__hid__items.md#ga3135a21a63c491daf8647fa771def0e7)
- HID\_USAGE : [hid.h](group__usb__hid__items.md#gac8429a70866a898887ead55664e04bd7)
- HID\_USAGE\_GEN\_BUTTON : [hid.h](group__usb__hid__definitions.md#ga13401731a0ead5448a0823d0f6142404)
- HID\_USAGE\_GEN\_DESKTOP : [hid.h](group__usb__hid__definitions.md#gacb3fc5b0f838dfa5eb95e9e1bf52b589)
- HID\_USAGE\_GEN\_DESKTOP\_GAMEPAD : [hid.h](group__usb__hid__definitions.md#ga17404e33133204a538f976d321c84ff0)
- HID\_USAGE\_GEN\_DESKTOP\_JOYSTICK : [hid.h](group__usb__hid__definitions.md#gada59a9f3aeaeaefc6112c7d9902b2d6d)
- HID\_USAGE\_GEN\_DESKTOP\_KEYBOARD : [hid.h](group__usb__hid__definitions.md#ga0bdaa3d23c79204a1064cb53b279bd77)
- HID\_USAGE\_GEN\_DESKTOP\_KEYPAD : [hid.h](group__usb__hid__definitions.md#ga69f8e44306828b3f44d3a7704ff07807)
- HID\_USAGE\_GEN\_DESKTOP\_MOUSE : [hid.h](group__usb__hid__definitions.md#ga983274dd50058de26e0e86d10d50e81a)
- HID\_USAGE\_GEN\_DESKTOP\_POINTER : [hid.h](group__usb__hid__definitions.md#ga77a7162980a77efa1e2e7b21942bb7dd)
- HID\_USAGE\_GEN\_DESKTOP\_UNDEFINED : [hid.h](group__usb__hid__definitions.md#ga1441517d7c57529dcf726a1dd8b09a07)
- HID\_USAGE\_GEN\_DESKTOP\_WHEEL : [hid.h](group__usb__hid__definitions.md#gaa8c772d412ac1ac7a36739c52f04c0a9)
- HID\_USAGE\_GEN\_DESKTOP\_X : [hid.h](group__usb__hid__definitions.md#gae283a3558ba536e163140a3b6cdbb273)
- HID\_USAGE\_GEN\_DESKTOP\_Y : [hid.h](group__usb__hid__definitions.md#gad1ab1f8f9c8a4a80bfc8e3a327e3b2fb)
- HID\_USAGE\_GEN\_KEYBOARD : [hid.h](group__usb__hid__definitions.md#ga1fdbfffd0b343cec1480e9f0347efa5d)
- HID\_USAGE\_GEN\_LEDS : [hid.h](group__usb__hid__definitions.md#gae632e9a37203506c051c3cacfdf0c2c7)
- HID\_USAGE\_MAX16 : [hid.h](group__usb__hid__items.md#gadd11a09546bc275c82e7a992cb9441cc)
- HID\_USAGE\_MAX8 : [hid.h](group__usb__hid__items.md#gae7fc9684ef10f50d69df6f495cc09e91)
- HID\_USAGE\_MIN16 : [hid.h](group__usb__hid__items.md#ga0dbc847d11cf64676f7cfc51b54150fa)
- HID\_USAGE\_MIN8 : [hid.h](group__usb__hid__items.md#gabf53f1e2eae6d686aeb7d62cc46b22ad)
- HID\_USAGE\_PAGE : [hid.h](group__usb__hid__items.md#ga30dc3f62583822ba27edd984dc2dec39)
- HISTORY\_DROPPED : [fff.h](fff_8h.md#adcf92825fec9b9478398765cb84cd00f)
- HIVECS : [cpu.h](arm_2cortex__a__r_2cpu_8h.md#a5c62a691b1161751afa302c0aa64f85d)
- HOST\_KBC\_EVT\_IBF : [espi.h](group__espi__interface.md#gaa0807c908666cdcbb3a85f310bfbfccc)
- HOST\_KBC\_EVT\_OBE : [espi.h](group__espi__interface.md#ga807bb75027f24e040cd28eba4bc1002c)
- HOST\_NAME\_MAX : [posix\_features.h](posix__features_8h.md#ac956117a90023ec0971b8f9fce9dec75)
- HOUR\_PER\_DAY : [sys\_clock.h](group__clock__apis.md#gafcbf34dc5c48a91fe5f6efe4c1bae745)
- HP\_APM\_M0\_INTR\_SOURCE : [esp-esp32c6-intmux.h](esp-esp32c6-intmux_8h.md#aa38b79495b31783ef39d627c88ac158b)
- HP\_APM\_M1\_INTR\_SOURCE : [esp-esp32c6-intmux.h](esp-esp32c6-intmux_8h.md#a0e5f1e66fb5502c426c42de7248f026f)
- HP\_APM\_M2\_INTR\_SOURCE : [esp-esp32c6-intmux.h](esp-esp32c6-intmux_8h.md#a4ef1ca8c6b71640fdf5ca7c7eed845c5)
- HP\_APM\_M3\_INTR\_SOURCE : [esp-esp32c6-intmux.h](esp-esp32c6-intmux_8h.md#a04a62fcb5b5ea0c0ab7029c5440a7a61)
- HP\_PERI\_TIMEOUT\_INTR\_SOURCE : [esp-esp32c6-intmux.h](esp-esp32c6-intmux_8h.md#a6c7756a44b101b5075aedac9baf733b9)
- HSCTLR\_RES1 : [cpu.h](arm_2cortex__a__r_2cpu_8h.md#a419c15bf37a7aaea28a4bea82b8c4421)
- HSI48\_SEL : [stm32l0\_clock.h](stm32l0__clock_8h.md#a3e4eee46bbec297ebd6da48abdff1dbb)
- HSIOM\_SEL\_ACT\_0 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a3080ad4afafa572482ea1a5b49f6a1ce)
- HSIOM\_SEL\_ACT\_1 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a990e35fecfcc37ca08fe709eee746618)
- HSIOM\_SEL\_ACT\_10 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a42c5af47fba8b69dacb3064e332193fd)
- HSIOM\_SEL\_ACT\_11 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a48052c8dd78b1403de4d675571b7e6e2)
- HSIOM\_SEL\_ACT\_12 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a6fc1302224b4d7585c25c3dc2ea340e7)
- HSIOM\_SEL\_ACT\_13 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#ae4fb8f65206098cace15b3e0f1c12a3e)
- HSIOM\_SEL\_ACT\_14 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a7c3ffb4e79372b4cc4d1a7b4554911d5)
- HSIOM\_SEL\_ACT\_15 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#ab3285eea99f44cbe985eb097d1166a3d)
- HSIOM\_SEL\_ACT\_2 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a696aeb76109bf339ebf0fcd20979f211)
- HSIOM\_SEL\_ACT\_3 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a25e956bc540c9570392a1722b7e94670)
- HSIOM\_SEL\_ACT\_4 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a3336f2e2d4886e0e46819ee4f4d96734)
- HSIOM\_SEL\_ACT\_5 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a1040ff80864b6a1d85eb4c07f4278ea1)
- HSIOM\_SEL\_ACT\_6 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a575188296b25564faa9b3a3b4817b5e4)
- HSIOM\_SEL\_ACT\_7 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#ae9c0f6360d56214106b09861eedb911a)
- HSIOM\_SEL\_ACT\_8 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a8d36acbee0c4de7088ddc08a8b1c07a6)
- HSIOM\_SEL\_ACT\_9 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#aff276e6f5cdc671648a428c22fc2776e)
- HSIOM\_SEL\_AMUXA : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a8806729fcb666c9de823be5dd55c873d)
- HSIOM\_SEL\_AMUXA\_DSI : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a4ba8695f92c0f347dd25ef981d67d1b0)
- HSIOM\_SEL\_AMUXB : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a862eb93443c5c9575ff990b776b6203b)
- HSIOM\_SEL\_AMUXB\_DSI : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#af7a28a087a8867a14423e9ab471cce54)
- HSIOM\_SEL\_DS\_0 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#afb33417be16e7fa6423fadd2ef4a0f5b)
- HSIOM\_SEL\_DS\_1 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#aa06be65ae17fc2dc1861c2af2e364652)
- HSIOM\_SEL\_DS\_2 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a07f591dc1f8a9f9eda13063d8c58c4eb)
- HSIOM\_SEL\_DS\_3 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a157da2f7e72fa8f19dfd682ec4444319)
- HSIOM\_SEL\_DS\_4 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a0f134c65358e450ca55341bbfec1cd0e)
- HSIOM\_SEL\_DS\_5 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a4208fc8f94abf237d943bc5e8ffe3080)
- HSIOM\_SEL\_DS\_6 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#ac0153eaa52ef010bf58304a44ecb1e9b)
- HSIOM\_SEL\_DS\_7 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a8c067c1737f0f1573e056a384954fd81)
- HSIOM\_SEL\_DSI\_DSI : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a959873e5156c6e3c24dd2773bb1ba516)
- HSIOM\_SEL\_DSI\_GPIO : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a022f7af586ee9b46f689d187e8dd73d8)
- HSIOM\_SEL\_GPIO : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#ac0d2af1bfb229de155412af7f00e4fe0)
- HSIOM\_SEL\_GPIO\_DSI : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a441de7f56a1c7c75cdae4d9f93ccfade)
- HSPI\_SEL : [stm32u5\_clock.h](stm32u5__clock_8h.md#aca5233e2f676feba6b622f0068047437)
- htonl : [net\_ip.h](group__ip__4__6.md#gae4027a6ad07f13aa12eab285a1b46019)
- htonll : [net\_ip.h](group__ip__4__6.md#ga9f4bf0773c45ad9a9753a1b784a13fbb)
- htons : [net\_ip.h](group__ip__4__6.md#ga51799f5ebb4c7228ef7e95c247030f42)
- HTTP\_MAX\_HEADER\_SIZE : [parser.h](parser_8h.md#a6272a7f92e0f1b66e07680f32f6f21b6)
- HTTP\_PARSER\_ERRNO : [parser.h](parser_8h.md#a356ebaa93536e6f94c2948a1416697c7)
- HTTP\_PARSER\_VERSION\_MAJOR : [parser.h](parser_8h.md#abfeef6f3e39791acc311791feda09d27)
- HTTP\_PARSER\_VERSION\_MINOR : [parser.h](parser_8h.md#ab8479153443ca4fe95b3de5adb0224de)
- HTTP\_PARSER\_VERSION\_PATCH : [parser.h](parser_8h.md#afb999672cce2ebd7f952bd3f28d8f5e5)
- HTTP\_RESOURCE\_DEFINE : [service.h](group__http__service.md#gab177436ac7a8d6589dcfbd416ffd9200)
- HTTP\_RESOURCE\_FOREACH : [service.h](group__http__service.md#ga450271e3a0a7098d5942539e1482605f)
- HTTP\_SERVER\_CONTENT\_TYPE : [server.h](group__http__server.md#ga709ddfe3f5ae5605b3399687f8be8c47)
- HTTP\_SERVER\_CONTENT\_TYPE\_FOREACH : [server.h](group__http__server.md#gad1ee2e803d6e38d54c344180a45a25c2)
- HTTP\_SERVER\_REGISTER\_HEADER\_CAPTURE : [server.h](group__http__server.md#gae1710786f10729930cc6c220a19e2071)
- HTTP\_SERVICE\_COUNT : [service.h](group__http__service.md#ga09fa08b24156d4a9540dbb525986d8cb)
- HTTP\_SERVICE\_DEFINE : [service.h](group__http__service.md#ga1aa8efe3622b5c9421a6257140c5d2c5)
- HTTP\_SERVICE\_DEFINE\_EMPTY : [service.h](group__http__service.md#ga8cfc7d2be962a1b0f44e389856097ac1)
- HTTP\_SERVICE\_FOREACH : [service.h](group__http__service.md#ga6144750de0b60baa3ae9c195a06622e7)
- HTTP\_SERVICE\_FOREACH\_RESOURCE : [service.h](group__http__service.md#ga97f21c80270bb79f32cf4d891e6c3eba)
- HTTP\_SERVICE\_RESOURCE\_COUNT : [service.h](group__http__service.md#gacadf010a47812c29313c914492774921)
- HTTPS\_SERVICE\_DEFINE : [service.h](group__http__service.md#gad8468a96fd46ad7d8aaf48667d7ef092)
- HTTPS\_SERVICE\_DEFINE\_EMPTY : [service.h](group__http__service.md#ga4ec55524f40ac76a0abdcac3818dfa80)
- HVM\_PARAM\_CONSOLE\_EVTCHN : [params.h](params_8h.md#a00e5f65cf70ae90180529027092fe410)
- HVM\_PARAM\_CONSOLE\_PFN : [params.h](params_8h.md#a39fc3d97c0f343b7abf263ae5175b8ca)
- HVM\_PARAM\_STORE\_EVTCHN : [params.h](params_8h.md#a1048ebeefb4866be6781863b44026779)
- HVM\_PARAM\_STORE\_PFN : [params.h](params_8h.md#a9bce3ce400b9ffbaf311dd28a5e35b0a)
- HVMOP\_get\_param : [hvm\_op.h](hvm__op_8h.md#a96465a9f2e2437aa398c72bfc357d928)
- HVMOP\_set\_param : [hvm\_op.h](hvm__op_8h.md#a9714e13adc338e97a811ac1beba162bd)

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/4.1.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
